<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.kristhyana.soshiki.ForgotPass"
    android:weightSum="1"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:text="@string/forgot_password"
        android:id="@+id/forgotTitle"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="238dp"
        android:layout_height="68dp"
        android:text="@string/forgot_message"
        android:id="@+id/forgotMessage"
        android:layout_gravity="center"
        android:layout_weight="0.02" />

    <TextView
        android:layout_width="238dp"
        android:layout_height="76dp"
        android:text="@string/nullEmail"
        android:id="@+id/nullEmailMess"
        android:visibility="gone"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/forgotPassEmail"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/sendBtn"
        android:onClick="sendEmail"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

</LinearLayout>
