<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#FFF"
    tools:context=".Login">


    <ImageView
        android:adjustViewBounds="true"
        android:layout_width="265dp"
        android:layout_height="226dp"
        android:id="@+id/companyIcon"
        android:src="@drawable/ki"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_message"
        android:id="@+id/loginMessage"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <EditText
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/username"
        android:id="@+id/username"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:password="true"
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn"
        android:id="@+id/loginBtn"
        android:layout_gravity="center_horizontal"
        android:onClick="LoginCred"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/forgotPassword"
        android:onClick="ForgotPass"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>
</LinearLayout>
