<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.kristhyana.soshiki.ResetPass"
    android:weightSum="1">



    <TextView
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:text="@string/resetInstr"
        android:id="@+id/resetInstr"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:id="@+id/resetErrorMess"
        android:visibility="gone"
        android:textColor="#FF00"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:id="@+id/oldPass"
        android:hint="@string/current_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:password="true"/>

    <EditText
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:id="@+id/NewPass"
        android:hint="@string/new_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:password="true"/>

    <EditText
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:id="@+id/NewPass2"
        android:hint="@string/reEnter_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:password="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:id="@+id/enterBtn"
        android:onClick="checkNewPassword"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
