<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.kristhyana.soshiki.Home">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/greeting"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/userName"
        android:layout_gravity="center_horizontal" />
</LinearLayout>

    <TextView
        android:layout_width="345dp"
        android:layout_height="205dp"
        android:textSize="45dp"
        android:text="@string/notConnected"
        android:id="@+id/webMess"
        android:visibility="gone"
        android:layout_gravity="center" />

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/compWeb"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
